--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@coreui/coreui": "^4.3.2",
     "@coreui/react": "^4.11.0",
+    "framer-motion": "^10.16.5",
     "next": "14.0.3",
+    "next-gallery": "^1.2.1",
     "nuka-carousel": "^7.0.0",
     "react": "^18",
     "react-dom": "^18",
