--- a/package.json
+++ b/package.json
@@ -9,17 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@coreui/coreui": "^4.3.2",
-    "@coreui/react": "^4.11.0",
     "framer-motion": "^10.16.5",
     "next": "14.0.3",
     "next-gallery": "^1.2.1",
     "nuka-carousel": "^7.0.0",
     "react": "^18",
-    "react-dom": "^18",
-    "react-image-gallery": "^1.3.0",
-    "react-responsive-carousel": "^3.2.23",
-    "react-slick": "^0.29.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
